--- a/index.html
+++ b/index.html
@@ -144,8 +144,77 @@
   <section class="section-three">
     <div class="section-titulo">
       <h2>Contact Us</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui consequuntur cupiditate deserunt natus labore
+        pariatur a est molestiae repellat tempora.</h3>
     </div>
   </section>
+
+  <section class="section-three-form">
+    <form action="" method="post"></form>
+    <div class="dados-pessoais">
+      <div class="coluna-1">
+        <input type="text" name="nome" id="nome" placeholder="Seu Nome" />
+        <input type="email" name="email" id="email" placeholder="Seu Email" />
+        <input type="tel" name="telefone" id="telefone" placeholder="Seu Telefone">
+        <input type="text" name="endereco" id="endereco" placeholder="Seu Endereço">
+      </div>
+      <div class="coluna">
+        <input type="text" name="assunto" id="assunto" placeholder="Assunto">
+        <input type="text" name="mensagem" id="mensagem" placeholder="Mensagem">
+      </div>
+    </div>
+
+      <div class="form-botoes">
+        <input type="submit" value="Send Message" />
+      </div>
+
+    </form>
+  </section>
+
+  <footer class="rodape">
+    <div class="footer-get">
+      <h2>Get In Touch</h2>
+      <div class="footer-endereco">
+        <ul>
+          <li>
+            <img src="./img/icon-location.png" alt="">
+            123 Street, New Work, USA
+          </li>
+          <li>
+            <img src="./img/icon-tel.png" alt="">
+            +012 345 67890
+          </li>
+          <li>
+            <img src="./img/icon-email.png" alt="">
+            info@example.com
+          </li>
+        </ul>
+
+        <div class="footer-social">
+          <figure>
+            <img src="./img/icon-twitter.png" alt="">
+            <img src="./img/icon-face.png" alt="">
+            <img src="./img/icon-youtube.png" alt="">
+          </figure>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-links">
+      <h2>Quick Links</h2>
+      <p>About Us</p>
+      <p>Contact Us</p>
+      <p>Our Services</p>
+      <p>Privacy Policy</p>
+      <p>Terms & Condition</p>
+    </div>
+
+    <div class="footer-botao-flecha">
+      <figure>
+        <img src="./img/icon-arrow.png" alt="">
+      </figure>
+    </div>
+  </footer>
 
 </body>
 
