--- a/index.html
+++ b/index.html
@@ -155,18 +155,20 @@
       <div class="coluna-1">
         <input type="text" name="nome" id="nome" placeholder="Seu Nome" />
         <input type="email" name="email" id="email" placeholder="Seu Email" />
+      </div>
+      <div class="coluna-2">
         <input type="tel" name="telefone" id="telefone" placeholder="Seu Telefone">
         <input type="text" name="endereco" id="endereco" placeholder="Seu Endereço">
       </div>
       <div class="coluna">
-        <input type="text" name="assunto" id="assunto" placeholder="Assunto">
-        <input type="text" name="mensagem" id="mensagem" placeholder="Mensagem">
+        <input type="text" name="assunto" id="assunto" placeholder="Subject">
+        <textarea name="Mensagem" id="Mensagem" placeholder="Message"></textarea>
       </div>
     </div>
 
-      <div class="form-botoes">
-        <input type="submit" value="Send Message" />
-      </div>
+    <div class="form-botoes">
+      <input type="submit" value="Send Message" />
+    </div>
 
     </form>
   </section>
