--- a/index.html
+++ b/index.html
@@ -205,11 +205,10 @@
 
     <div class="footer-links">
       <h2>Quick Links</h2>
-      <p>About Us</p>
-      <p>Contact Us</p>
-      <p>Our Services</p>
-      <p>Privacy Policy</p>
-      <p>Terms & Condition</p>
+      <a href="#">Contact Us</a>
+      <a href="#">Our Services</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Terms & Condition</a>
     </div>
 
     <div class="footer-botao-flecha">
