--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <section class="section-two-card">
     <div class="card-houses">
       <figure>
-        <img src="/img/sec2-house1.jpg" alt="Foto Casa 2">
+        <img src="./img/sec2-house1.jpg" alt="Foto Casa 1">
       </figure>
       <div class="card-conteudo">
         <h3 class="card-preco">$12,345</h3>
@@ -115,7 +115,7 @@
 
     <div class="card-houses">
       <figure>
-        <img src="/img/sec2-house2.jpg" alt="Foto Casa 2">
+        <img src="./img/sec2-house2.jpg" alt="Foto Casa 2">
       </figure>
       <div class="card-conteudo">
         <h3 class="card-preco">$12,345</h3>
@@ -126,7 +126,7 @@
 
     <div class="card-houses">
       <figure>
-        <img src="/img/sec2-house3.jpg" alt="Foto Casa 3">
+        <img src="./img/sec2-house3.jpg" alt="Foto Casa 3">
       </figure>
       <div class="card-conteudo">
         <h3 class="card-preco">$12,345</h3>
