--- a/index.html
+++ b/index.html
@@ -5,35 +5,67 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/media-queries.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
   <title>Maakan</title>
 </head>
 
 <body>
   <header class="cabecalho">
-    <div class="cabecalho-logo">
-      <figure>
-        <img src="./img/icon-logo.png" alt="Logo Maakan">
-      </figure>
-      <h2>Maakan</h2>
-    </div>
-
-    <nav class="cabecalho-menu">
-      <ul>
-        <li><a href="" class="lista-menu-um"> HOME </a></li>
-        <li><a href="" class="lista-menu"> ABOUT </a></li>
-        <li><a href="" class="lista-menu"> CONTACT </a></li>
-      </ul>
+    <nav class=" navbar-expand-lg navbar bg-body-tertiary fixed-top">
+      <div class="container-fluid ">
+        <div class="cabecalho-logo mx-autor">
+          <a class="navbar-brand " href="#">
+            <figure>
+              <img src="./img/icon-logo.png" alt="Logo">
+            </figure>
+          </a>
+          <h2 class="fw-bold m-auto text-center">Maakan</h2>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="./img/icon-logo.png"
+                alt="Logo">
+            </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#" id="dif">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">ABOUT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contato">CONTACT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                </a>
+              </li>
+          </div>
+        </div>
+      </div>
     </nav>
   </header>
 
   <main class="main">
     <div class="main-descricao">
       <div class="main-titulo">
-        <h2>Find a <span>Perfect Home</span></h2>
-        <h2>To Live With Your</h2>
-        <h2>Family</h2>
+        <h2 class="fw-bold">Find a <span>Perfect Home</span></h2>
+        <h2 class="fw-bold">To Live With Your</h2>
+        <h2 class="fw-bold">Family</h2>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias culpa, consectetur, magnam nostrum hic ipsam
         dignissimos, neque doloribus voluptate delectus odit.
@@ -53,7 +85,7 @@
 
   <section class="section-one">
     <div class="section-titulo">
-      <h2>Property Types</h2>
+      <h2 class="fw-bold">Property Types</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque rem corporis magni recusandae numquam
         doloribus necessitatibus iste repudiandae ea, quisquam est illo maiores corrupti maxime ipsum quis alias odio
         officia?</p>
@@ -65,7 +97,7 @@
       <figure>
         <img src="./img/sec1-icon-apartment.png" alt="Ícone Apartamento">
       </figure>
-      <h3>Apartament</h3>
+      <h3 class="fw-bold">Apartament</h3>
       <h3 class="card-subtitulo">123 Properties</h3>
     </div>
 
@@ -73,7 +105,7 @@
       <figure>
         <img src="./img/sec1-icon-villa.png" alt="Ícone Villa">
       </figure>
-      <h3>Villa</h3>
+      <h3 class="fw-bold">Villa</h3>
       <h3 class="card-subtitulo">123 Properties</h3>
     </div>
 
@@ -81,7 +113,7 @@
       <figure>
         <img src="./img/sec1-icon-house.png" alt="Ícone Home">
       </figure>
-      <h3>Home</h3>
+      <h3 class="fw-bold">Home</h3>
       <h3 class="card-subtitulo">123 Properties</h3>
     </div>
 
@@ -89,14 +121,14 @@
       <figure>
         <img src="./img/sec1-icon-housing.png" alt="Ícone Office">
       </figure>
-      <h3>Office</h3>
+      <h3 class="fw-bold">Office</h3>
       <h3 class="card-subtitulo">123 Properties</h3>
     </div>
   </section>
 
   <section class="section-two">
     <div class="section-titulo">
-      <h2>Property Types</h2>
+      <h2 class="fw-bold">Property Types</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque rem corporis magni recusandae numquam</p>
     </div>
   </section>
@@ -107,8 +139,8 @@
         <img src="./img/sec2-house1.jpg" alt="Foto Casa 1">
       </figure>
       <div class="card-conteudo">
-        <h3 class="card-preco">$12,345</h3>
-        <h3>Golden Urban House For Sell</h3>
+        <h2 class="card-preco fw-bold">$12,345</h3>
+        <h3 class="fw-bold">Golden Urban House For Sell</h3>
         <h4>123 Street, New York, USA</h4>
       </div>
     </div>
@@ -118,8 +150,8 @@
         <img src="./img/sec2-house2.jpg" alt="Foto Casa 2">
       </figure>
       <div class="card-conteudo">
-        <h3 class="card-preco">$12,345</h3>
-        <h3>Golden Urban House For Sell</h3>
+        <h2 class="card-preco fw-bold">$12,345</h3>
+        <h3 class="fw-bold">Golden Urban House For Sell</h3>
         <h4>123 Street, New York, USA</h4>
       </div>
     </div>
@@ -129,8 +161,8 @@
         <img src="./img/sec2-house3.jpg" alt="Foto Casa 3">
       </figure>
       <div class="card-conteudo">
-        <h3 class="card-preco">$12,345</h3>
-        <h3>Golden Urban House For Sell</h3>
+        <h2 class="card-preco fw-bold">$12,345</h3>
+        <h3 class="fw-bold">Golden Urban House For Sell</h3>
         <h4>123 Street, New York, USA</h4>
       </div>
     </div>
@@ -144,7 +176,7 @@
 
   <section class="section-three">
     <div class="section-titulo">
-      <h2>Contact Us</h2>
+      <h2 class="fw-bold">Contact Us</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui consequuntur cupiditate deserunt natus labore
         pariatur a est molestiae repellat tempora.</h3>
     </div>
@@ -218,6 +250,10 @@
     </div>
   </footer>
 
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
