--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </div>
 
     <div class="form-botoes">
-      <input type="submit" value="Send Message" />
+      <input type="submit" class="botao" value="Send Message" />
     </div>
 
     </form>
